release preparations: fix javadoc